<resources>
    <string name="app_name">tic_tac_toe</string>
    <string name="players_name">What is your name?</string>
    <string name="players_symbol">Which symbol would you like to use?</string>
    <string name="noughts">noughts</string>
    <string name="crosses">crosses</string>
    <string name="first_move">Would you like to do the first move?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="btn_start">Start Game</string>
    <string name="btn_play">Play</string>
</resources>
